[project]
name = "booking-voice-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "livekit-agents[google,openai,silero,turn-detector]~=1.4",
    "livekit-plugins-noise-cancellation>=0.2, <1.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "onnxruntime<1.24",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
]
